@@ -1,0 +1,7 @@
+## Process this file with automake to produce Makefile.in
+
+DIST_SUBDIRS = examples
+SUBDIRS = examples
+
+docdatadir = $(datadir)/doc/@PACKAGE@/tcl8
+dist_docdata_DATA = bindings.html
