@@ -1,0 +1,4 @@
+## Process this file with automake to produce Makefile.in
+
+docdatadir = $(datadir)/doc/@PACKAGE@/tcl8/examples
+dist_docdata_DATA = simplesearch.tcl simpleindex.tcl
